--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ Thumbs.db
 out/
 build/
 
-
 __pycache__/
 *.py[cod]
+
+
+# 忽略 kafka_dir/data 裡的所有內容，但保留資料夾本身
+kafka_dir/data/*
+!kafka_dir/data/.gitkeep
