--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ __pycache__/
 # 忽略 kafka_dir/data 裡的所有內容，但保留資料夾本身
 kafka_dir/data/*
 !kafka_dir/data/.gitkeep
+
+flink_dir/jm_checkpoints/*
+!flink_dir/jm_checkpoints/.gitkeep
+
+flink_dir/tm_checkpoints/*
+!flink_dir/tm_checkpoints/.gitkeep
