add: functionable ws to kafka connector, and it's dockerfile.

--- a/kafka_ws_connector_dir/Dockerfile
+++ b/kafka_ws_connector_dir/Dockerfile
@@ -14,4 +14,4 @@ WORKDIR /app
 COPY . /app/
 
 # ENV PYTHONUNBUFFERED=1
-CMD ["python", "-m", "main.py"]
+CMD ["python", "-m", "kafka_ws_connector_dir"]
