update: switch time zone from UTC to Europe/Copenhagen

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       WS_URL: "wss://stream.binance.com:9443/ws/btcusdt@trade"
       KAFKA_BOOTSTRAP: "kafka:9092"
       KAFKA_TOPIC: "btc_raw"
+      TZ: "Europe/Copenhagen" 
     depends_on:
       - kafka
     restart: unless-stopped
