--- a/flink_dir/flink_job/pom.xml
+++ b/flink_dir/flink_job/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.example</groupId>
+  <groupId>com.ma</groupId>
   <artifactId>flink-job</artifactId>
   <version>1.0.0</version>
   <name>flink-job</name>
@@ -64,7 +64,7 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>com.example.MovingAverageCounter</mainClass>
+                  <mainClass>com.ma.MovingAverageCounter</mainClass>
                 </transformer>
               </transformers>
             </configuration>
