--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,73 @@
 services:
+
+  kafka:
+    image: bitnami/kafka:4.0.0
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_CFG_NODE_ID: "0"
+      KAFKA_CFG_PROCESS_ROLES: "broker,controller"
+      KAFKA_OPTS: "-Duser.timezone=Asia/Taipei"
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: "0@localhost:9093"
+      KAFKA_CFG_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,CONTROLLER://kafka:9093
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+      KAFKA_CFG_KRAFT_STORAGE_ROOT_DIR: /bitnami/kafka/data
+      ALLOW_PLAINTEXT_LISTENER: "yes"
+      KAFKA_CFG_LOG_RETENTION_MINUTES: "5"
+      KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: "true"
+      # 這行之後要修正，因為只會有一主題，一分區，接下來要調整成寫定。但是需要在多一個docker service去完成
+
+    volumes:
+      - ./kafka_dir/data:/bitnami/kafka/data
+    networks: [k_f_net]
+
+  ws_to_kafka_connector:
+    build:
+      context: .
+      dockerfile: kafka_ws_connector_dir/Dockerfile
+    environment:
+      WS_URL: "wss://stream.binance.com:9443/ws/btcusdt@trade"
+      KAFKA_BOOTSTRAP: "kafka:9092"
+      KAFKA_TOPIC: "btc_raw"
+      LOG_LEVEL: "debug"
+      TZ: "Europe/Copenhagen"
+    # depends_on:
+    #   - kafka
+    restart: unless-stopped
+    networks: [k_f_net]
+
+  jm:
+    image: flink:1.20.2-scala_2.12-java17
+    command: standalone-job -c com.example.KafkaReadOnly /opt/flink/usrlib/flink-job-1.0.0.jar
+    ports:
+      - "8081:8081"
+    environment:
+      - |
+        FLINK_PROPERTIES=
+          jobmanager.rpc.address: jm
+          state.checkpoints.dir: file:///opt/flink/checkpoints
+    # 這邊的 jm container name 建議小寫，因為大寫會轉回小寫，但是我要DNS連接，這時候我想連大寫的找不到
+    volumes:
+      - ./flink_dir/checkpoints:/opt/flink/checkpoints
+      - ./flink_dir/usrlib:/opt/flink/usrlib          
+    networks: [k_f_net]
+
+  tm:
+    image: flink:1.20.2-scala_2.12-java17
+    command: taskmanager
+    environment:
+      - |
+        FLINK_PROPERTIES=
+          jobmanager.rpc.address: jm
+          taskmanager.numberOfTaskSlots: 4
+          state.checkpoints.dir: file:///opt/flink/checkpoints
+    volumes:
+      - ./flink_dir/checkpoints:/opt/flink/checkpoints
+      - ./flink_dir/usrlib:/opt/flink/usrlib          
+    networks: [k_f_net]
+  
   clickhouse:
     image: clickhouse/clickhouse-server:25.8.2.29
     environment:
@@ -24,76 +93,17 @@ services:
     cap_add:
       - IPC_LOCK
       - SYS_NICE  
+    networks: [k_f_net]
 
-#   kafka:
-#     image: bitnami/kafka:4.0.0
-#     ports:
-#       - "9092:9092"
-#     environment:
-#       KAFKA_CFG_NODE_ID: "0"
-#       KAFKA_CFG_PROCESS_ROLES: "broker,controller"
-#       KAFKA_OPTS: "-Duser.timezone=Asia/Taipei"
-#       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: "0@localhost:9093"
-#       KAFKA_CFG_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
-#       KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,CONTROLLER://kafka:9093
-#       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-#       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
-#       KAFKA_CFG_KRAFT_STORAGE_ROOT_DIR: /bitnami/kafka/data
-#       ALLOW_PLAINTEXT_LISTENER: "yes"
-#       KAFKA_CFG_LOG_RETENTION_MINUTES: "5"
-#       KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: "true"
-#       # 這行之後要修正，因為只會有一主題，一分區，接下來要調整成寫定。但是需要在多一個docker service去完成
+  grafana:
+    image: grafana/grafana:12.1.1
+    ports:
+      - "3000:3000"
+    environment:
+    - GF_INSTALL_PLUGINS=vertamedia-clickhouse-datasource
+    volumes:
+      - ./grafana_dir/grafana-data:/var/lib/grafana
+    networks: [k_f_net]
 
-#     volumes:
-#       - ./kafka_dir/data:/bitnami/kafka/data
-#     networks: [k_f_net]
-
-#   ws_to_kafka_connector:
-#     build:
-#       context: .
-#       dockerfile: kafka_ws_connector_dir/Dockerfile
-#     environment:
-#       WS_URL: "wss://stream.binance.com:9443/ws/btcusdt@trade"
-#       KAFKA_BOOTSTRAP: "kafka:9092"
-#       KAFKA_TOPIC: "btc_raw"
-#       LOG_LEVEL: "INFO"
-#       TZ: "Europe/Copenhagen"
-#     depends_on:
-#       - kafka
-#     restart: unless-stopped
-#     networks: [k_f_net]
-
-#   jm:
-#     image: flink:1.20.2-scala_2.12-java17
-#     command: standalone-job -c com.example.KafkaReadOnly /opt/flink/usrlib/flink-job-1.0.0.jar
-#     ports:
-#       - "8081:8081"
-#     environment:
-#       - |
-#         FLINK_PROPERTIES=
-#           jobmanager.rpc.address: jm
-#           state.checkpoints.dir: file:///opt/flink/checkpoints
-#     # 這邊的 jm container name 建議小寫，因為大寫會轉回小寫，但是我要DNS連接，這時候我想連大寫的找不到
-#     volumes:
-#       - ./flink_dir/checkpoints:/opt/flink/checkpoints
-#       - ./flink_dir/usrlib:/opt/flink/usrlib          
-#     networks: [k_f_net]
-
-#   tm:
-#     image: flink:1.20.2-scala_2.12-java17
-#     command: taskmanager
-#     environment:
-#       - |
-#         FLINK_PROPERTIES=
-#           jobmanager.rpc.address: jm
-#           taskmanager.numberOfTaskSlots: 4
-#           state.checkpoints.dir: file:///opt/flink/checkpoints
-#     volumes:
-#       - ./flink_dir/checkpoints:/opt/flink/checkpoints
-#       - ./flink_dir/usrlib:/opt/flink/usrlib          
-#     networks: [k_f_net]
-  
-
-
-# networks:
-#   k_f_net: {}
+networks:
+  k_f_net: {}
